feat: Add vote filtering functionality